--- a/src/app/learning-resources/learning-resources.component.html
+++ b/src/app/learning-resources/learning-resources.component.html
@@ -3,12 +3,12 @@
 
 <ul>
   <li>
-    <a href="https://angular.dev">Angular Documentation</a>
+    <a appSafeLink="AngularDocumentation" href="https://angular.dev">Angular Documentation</a>
   </li>
   <li>
-    <a href="https://academind.com/courses">Academind Courses</a>
+    <a queryParam="AcademindCourses" href="https://academind.com/courses" appSafeLink>Academind Courses</a>
   </li>
   <li>
-    <a href="https://www.google.com/search?q=angular">Google</a>
+    <a href="https://www.google.com/search?q=angular" appSafeLink queryParam="Google">Google</a>
   </li>
 </ul>
