completed the custom directive but it will not work as structural directive we will make it function like that in next commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <hr />
 
   <app-auth />
-  @if(isAdmin()){
+  <!-- @if(isAdmin()){
   <p>Only Admin can see this</p>
   }
   @else if(isUser()){
@@ -12,5 +12,6 @@
   }
   @else{
   <p>Please LogIn, you are a guest for now</p>
-  }
+  } -->
+  <p appCustomDirective='admin'>Only Admin can see this</p>
 </main>
